# Swarm-Tune

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  JOIN.md  LICENSE  Makefile  README.md  SECURITY.md  architecture.md  fly.toml  my.env.template  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chaos.yml  ci.yml  publish.yml
configs/: node.yaml  training.yaml
dashboard/: index.html
docker/: Dockerfile  docker-compose.2node.yml  docker-compose.relay.yml  docker-compose.yml
docs/: architecture.md
runs/: gpt2-competition-001.json  gpt2-competition-2v2.json  gpt2-wikitrain-001.json
scripts/: benchmark.py  deploy_relay_fly.sh  generate_shards.py  join.py  parse_logs.py  publish_checkpoint.py  reconstruct_checkpoint.py  run_competition.py  set_bootstrap.py  setup_dev.sh
src/swarm_tune/: __init__.py
src/swarm_tune/config/: __init__.py  settings.py
src/swarm_tune/node/: __init__.py  main.py  metrics.py
src/swarm_tune/node/aggregator/: __init__.py  averaging.py  strategy.py  timeout.py
src/swarm_tune/node/p2p/: __init__.py  discovery.py  gossip.py  heartbeat.py  peer_selector.py
src/swarm_tune/node/trainer/: __init__.py  compressor.py  data.py  gradient.py  model.py  serializer.py
src/swarm_tune/runs/: __init__.py  competition.py  manifest.py
tests/: conftest.py
tests/chaos/: test_node_failure.py
tests/integration/: test_competition.py  test_gradient_sync.py  test_p2p_network.py  test_swarm.py
tests/unit/: test_aggregator.py  test_audit_fixes.py  test_competition.py  test_manifest.py  test_p2p.py  test_trainer.py
