[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-tune"
version = "0.1.0"
description = "Decentralized P2P orchestration layer for fine-tuning ML models across commodity hardware"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Swarm-Tune Contributors" }]
keywords = ["machine-learning", "distributed-training", "p2p", "libp2p", "pytorch"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3.0",
    "libp2p>=0.1.5",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "structlog>=24.2.0",
    "rich>=13.7.1",
    "numpy>=1.26.0",
    "click>=8.1.7",
    "anyio[trio]>=4.4.0",
    "cryptography>=42.0.0",
    "multiaddr>=0.0.9",
    "transformers>=4.40.0",
    "datasets>=2.20.0",
    "tokenizers>=0.19.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "anyio[trio]>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "pre-commit>=3.7.1",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
swarm-tune = "swarm_tune.node.main:cli"

[project.urls]
Repository = "https://github.com/yashasviudayan-py/Swarm-Tune"
Issues = "https://github.com/yashasviudayan-py/Swarm-Tune/issues"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/swarm_tune"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting (replaces black, isort, flake8, pylint)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # use of assert (fine in tests)
    "S104",   # binding to 0.0.0.0 is intentional for a network server
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/swarm_tune",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=60",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: multi-component integration tests",
    "chaos: fault-injection and resilience tests (slow)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/swarm_tune"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
